# controladoria-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CODEX.md  Dockerfile  PROMPT.md  README.md  docker-compose.yml  file_reader.py  main.py  pyproject.toml  requirements.txt  resultado_analise.json
.github/workflows/: deploy.yml  main.yml  terraform.yml
Documentos/FRANCISCA DA SILVA SANTOS/: MODELO RECURSO DEFESOS.docx
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_documento_identidade_enum.py  0003_sync_doc_class_enum.py
app/: main.py
app/logic/: classification.py
app/models/: schemas.py
apps/extract/: __init__.py
apps/extract/content/: build_doc_payload.py
apps/extract/models/: __init__.py  api.py  document.py
backend/: .gitignore
docs/: cron_atualizacao_processos.md  diagrams.md  processos_consultar.md  processos_dashboard.md  solicitacao_classificador.md  solicitacao_consultar.md  solicitacao_dashboard.md  solicitacao_elegibilidade.md  solicitacao_extracao.md
ia/: extrator.txt  frontend.txt  prompts.yml
src/: agent.py  file_reader.py  main.py  redis_config.py
src/domain/core/: concurrency.py  context.py  either.py  errors.py  logger.py  metrics.py
src/domain/entities/: auth.py  case.py  categorias.py  document.py  documento.py  essay.py  prompt.py  solicitation.py
src/domain/gateway/: auth_gateway.py  classificador_gateway.py  document_extraction_gateway.py  eligibility_gateway.py  ia_gateway.py  legal_case_gateway.py  object_storage_gateway.py
src/domain/repositories/: document_extraction_repository.py  document_repository.py  eligibility_repository.py  (+2 more)
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_datajud_gateway_e2e.py  test_get_solicitacao_by_id_use_case.py  test_legal_case_mapper.py  test_session_user_endpoint.py  test_solicitacoes_router.py
(+60 files in other folders)
