[project]
name = "controladoria-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.120.1,<1.0.0",
  "uvicorn>=0.38.0,<1.0.0",
  "SQLAlchemy>=2.0.35,<3.0.0",
  "alembic>=1.13.3,<2.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "python-dotenv>=1.2.1,<2.0.0",
  "pydantic>=2.12.3,<3.0.0",
  "pydantic-core>=2.41.4,<3.0.0",
  "python-jose>=3.3.0,<4.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "boto3>=1.35.36,<2.0.0",
  "google-auth>=2.42.1,<3.0.0",
  "google-genai>=1.47.0,<2.0.0",
  "requests>=2.32.5,<3.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "backoff>=2.2.1,<3.0.0",
  "APScheduler>=3.10.4,<4.0.0",
  "cryptography>=46.0.3,<47.0.0",
  "PyJWT>=2.10.1,<3.0.0",
  "PyYAML>=6.0.3,<7.0.0",
  "tzlocal>=5.3.1,<6.0.0",
  "typing-extensions>=4.15.0,<5.0.0",
  "anyio>=4.11.0,<5.0.0",
  "httpx>=0.28.1,<1.0.0",
  "starlette>=0.48.0,<1.0.0",
  "websockets>=15.0.1,<16.0.0",
]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
pylint = "^3.3.9"
pytest = "^8.4.2"
mypy-extensions = "^1.1.0"
pre-commit = "^4.3.0"
virtualenv = "^20.35.3"
tomlkit = "^0.13.3"
packaging = "^25.0"
