[project]
name = "controladoria-api"
version = "0.1.0"
description = "A api to controlling the business logic of a law firm."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "apscheduler>=3.11.1",
    "backoff>=2.2.1",
    "boto3>=1.40.69",
    "fastapi[standard]>=0.121.1",
    "google-genai>=1.49.0",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
